gccida/g1/modified_type_die
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/modified_type_die/src/dwarf2out.c:7940:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // r14 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/modified_type_die/src/dwarf2out.c:7945:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/modified_type_die/src/dwarf2out.c:7968:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v38; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/modified_type_die/src/dwarf2out.c:8036:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 5026, "add_child_die"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/modified_type_die/src/dwarf2out.c:8180:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 7381, "base_type_die"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/modified_type_die/src/dwarf2out.c:8190:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 5026, "add_child_die"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/modified_type_die/src/dwarf2out.c:8261:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 7573, "modified_type_die"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/modified_type_die/src/dwarf2out.c:8264:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 7461, "is_base_type"); 
                             ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/modified_type_die/src/obj/dwarf2out.o] Error 1
